- Rewritten the format and management of save states.
  WARNING save states of version 0.110 or earlier are no longer compatible.
- Rewritten the audio of the VRC7.
  Implemented the project "A YM2413 emulator written in C" of okaxaki :
  * https://github.com/digital-sound-antiques/emu2413
- Added support to Quick Disk format.
- Added an option for RAM initialization (#276).
  It's possible to choose between three values:
  * 0x00
  * 0xFF (default)
  * Randomize
- Added a screen icon that shows when fast forward is active.
- Added the possibility to set default values for PPU overclocking to be applied for all roms in addition to the per-game ones already used.
- Added Arabic translation (thx to Chipsum).
- Added Polish translation (thx to elektronicznypank).
- Added full support for the NES 2.0 header format.
- Added video filter : "NTSC CRT LMP88959" and "NTSC NES LMP88959" (https://github.com/LMP88959/NTSC-CRT, Thx to LMP88959 for is great work).
- Added video filter : "PAL CRT LMP88959" and "PAL NES LMP88959" (https://github.com/LMP88959/PAL-CRT, Thx to LMP88959 for is great work).
- Added support to mapper : 100, 122, 157, 170, 272, 291, 311, 334, 354, 362, 366, 384, 421, 446, 471, 517, 551, 552, 555, 561.
- Added support to UNIF mapper : Transformer, UNROM, AMROM, AOROM, LH09, A60AS, T4A54A, FC-28-5027, 150in1A, 212-HONG-KONG, GKCXIN, 113in1JY110, 820561C, M2C52A, S-2009.
- Added full support for the Detach Barcode Reader of mapper 157.
- Added support for nes20db.xml and dip.cfg (many thx to NewRisingSun for is for his immense work).
  Both files will be distributed together with the emulator and will be located in the following directories:
  * Linux/BSD - {default system datadir}/puNES
  * Windows - directory where the executable is placed.