@@ -28,113 +28,127 @@ dlgCmdLineHelp::dlgCmdLineHelp(QWidget *parent, const QString name, const QStrin
 dlgCmdLineHelp::dlgCmdLineHelp(QWidget *parent, const QString name) : QDialog(parent) {
 	uTCHAR *usage_string;
 	const uTCHAR *istructions = {
-			uL("Usage: %%1 [options] file...\n\n")
-			uL("Options:\n")
-			uL("-h, --help                print this help\n")
-			uL("-V, --version             print the version\n")
-			uL("    --portable            start in portable mode\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
+		uL("Usage: %%1 [options] file...\n\n")
+		uL("Options:\n")
+		uL("-h, --help                print this help\n")
+		uL("-V, --version             print the version\n")
+		uL("    --portable            start in portable mode\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
 #if defined (WITH_OPENGL)
-			uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
 #endif
 #if defined (FULLSCREEN_RESFREQ)
-			uL("" uPs("") "\n")
-			uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
 #endif
-			uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+		uL("" uPs("") "\n")
+	};
+	const uTCHAR *sch_input = {
+		uL("    --shurtcut.[desc]     set up the shortcut   : [keyboard],[joystick]" NEWLINE)
+		uL("                                                  descriptions can be found in the puNES.cfg" NEWLINE)
+		uL("                                                  e.g." NEWLINE)
+		uL("                                                  --shurtcut.open=Alt+O" NEWLINE)
+		uL("                                                  --shurtcut.hard_reset=F11" NEWLINE)
+		uL("    --input.[desc]        input sequence        : [keyboard],[joystick]" NEWLINE)
+		uL("                                                  descriptions can be found in the input.cfg" NEWLINE)
+		uL("                                                  e.g." NEWLINE)
+		uL("                                                  --input.p1k_up=Up" NEWLINE)
+		uL("                                                  --input.p1k_turboa=W")
 	};
 
 	usage_string = (uTCHAR *)malloc(1024 * 9);
 	usnprintf(usage_string, 1024 * 9, istructions,
-			main_cfg[SET_MODE].hlp,
-			main_cfg[SET_SCALE].hlp,
-			main_cfg[SET_PAR].hlp,
-			main_cfg[SET_PAR_SOFT_STRETCH].hlp,
-			main_cfg[SET_OVERSCAN_BLACK_BORDERS].hlp,
-			main_cfg[SET_OVERSCAN_BLACK_BORDERS_FSCR].hlp,
-			main_cfg[SET_OVERSCAN_DEFAULT].hlp,
-			main_cfg[SET_FILTER].hlp,
-			main_cfg[SET_NTSC_FORMAT].hlp,
-			main_cfg[SET_SHADER].hlp,
-			main_cfg[SET_PALETTE].hlp,
-			main_cfg[SET_SWAP_EMPHASIS_PAL].hlp,
-			main_cfg[SET_VSYNC].hlp,
-			main_cfg[SET_INTERPOLATION].hlp,
-			main_cfg[SET_TEXT_ON_SCREEN].hlp,
-			main_cfg[SET_INPUT_DISPLAY].hlp,
-			main_cfg[SET_DISABLE_TV_NOISE].hlp,
-			main_cfg[SET_DISABLE_SEPIA_PAUSE].hlp,
+		main_cfg[SET_MODE].hlp,
+		main_cfg[SET_SCALE].hlp,
+		main_cfg[SET_PAR].hlp,
+		main_cfg[SET_PAR_SOFT_STRETCH].hlp,
+		main_cfg[SET_OVERSCAN_BLACK_BORDERS].hlp,
+		main_cfg[SET_OVERSCAN_BLACK_BORDERS_FSCR].hlp,
+		main_cfg[SET_OVERSCAN_DEFAULT].hlp,
+		main_cfg[SET_FILTER].hlp,
+		main_cfg[SET_NTSC_FORMAT].hlp,
+		main_cfg[SET_SHADER].hlp,
+		main_cfg[SET_PALETTE].hlp,
+		main_cfg[SET_SWAP_EMPHASIS_PAL].hlp,
+		main_cfg[SET_VSYNC].hlp,
+		main_cfg[SET_INTERPOLATION].hlp,
+		main_cfg[SET_TEXT_ON_SCREEN].hlp,
+		main_cfg[SET_INPUT_DISPLAY].hlp,
+		main_cfg[SET_DISABLE_TV_NOISE].hlp,
+		main_cfg[SET_DISABLE_SEPIA_PAUSE].hlp,
 #if defined (WITH_OPENGL)
-			main_cfg[SET_DISABLE_SRGB_FBO].hlp,
+		main_cfg[SET_DISABLE_SRGB_FBO].hlp,
 #endif
-			main_cfg[SET_OVERSCAN_BRD_NTSC].hlp,
-			main_cfg[SET_OVERSCAN_BRD_PAL].hlp,
-			main_cfg[SET_FULLSCREEN].hlp,
-			main_cfg[SET_FULLSCREEN_IN_WINDOW].hlp,
-			main_cfg[SET_INTEGER_FULLSCREEN].hlp,
-			main_cfg[SET_STRETCH_FULLSCREEN].hlp,
+		main_cfg[SET_OVERSCAN_BRD_NTSC].hlp,
+		main_cfg[SET_OVERSCAN_BRD_PAL].hlp,
+		main_cfg[SET_FULLSCREEN].hlp,
+		main_cfg[SET_FULLSCREEN_IN_WINDOW].hlp,
+		main_cfg[SET_INTEGER_FULLSCREEN].hlp,
+		main_cfg[SET_STRETCH_FULLSCREEN].hlp,
 #if defined (FULLSCREEN_RESFREQ)
-			main_cfg[SET_ADAPTIVE_RRATE_FULLSCREEN].hlp,
-			main_cfg[SET_RESOLUTION_FULLSCREEN].hlp,
+		main_cfg[SET_ADAPTIVE_RRATE_FULLSCREEN].hlp,
+		main_cfg[SET_RESOLUTION_FULLSCREEN].hlp,
 #endif
-			main_cfg[SET_HORIZONTAL_FLIP_SCREEN].hlp,
-			main_cfg[SET_SCREEN_ROTATION].hlp,
-			main_cfg[SET_AUDIO_OUTPUT_DEVICE].hlp,
-			main_cfg[SET_AUDIO].hlp,
-			main_cfg[SET_AUDIO_BUFFER_FACTOR].hlp,
-			main_cfg[SET_SAMPLERATE].hlp,
-			main_cfg[SET_CHANNELS].hlp,
-			main_cfg[SET_STEREO_DELAY].hlp,
-			main_cfg[SET_REVERSE_BITS_DPCM].hlp,
-			main_cfg[SET_SWAP_DUTY].hlp,
-			main_cfg[SET_HIDE_SPRITES].hlp,
-			main_cfg[SET_HIDE_BACKGROUND].hlp,
-			main_cfg[SET_UNLIMITED_SPRITES].hlp,
-			main_cfg[SET_BCK_PAUSE].hlp,
-			main_cfg[SET_CHEAT_MODE].hlp,
-			main_cfg[SET_GUI_LANGUAGE].hlp,
-			main_cfg[SET_REWIND_MINUTES].hlp,
-			main_cfg[SET_ONLYCMDLINE_HIDDEN_GUI].hlp
+		main_cfg[SET_HORIZONTAL_FLIP_SCREEN].hlp,
+		main_cfg[SET_SCREEN_ROTATION].hlp,
+		main_cfg[SET_AUDIO_OUTPUT_DEVICE].hlp,
+		main_cfg[SET_AUDIO].hlp,
+		main_cfg[SET_AUDIO_BUFFER_FACTOR].hlp,
+		main_cfg[SET_SAMPLERATE].hlp,
+		main_cfg[SET_CHANNELS].hlp,
+		main_cfg[SET_STEREO_DELAY].hlp,
+		main_cfg[SET_REVERSE_BITS_DPCM].hlp,
+		main_cfg[SET_SWAP_DUTY].hlp,
+		main_cfg[SET_HIDE_SPRITES].hlp,
+		main_cfg[SET_HIDE_BACKGROUND].hlp,
+		main_cfg[SET_UNLIMITED_SPRITES].hlp,
+		main_cfg[SET_BCK_PAUSE].hlp,
+		main_cfg[SET_CHEAT_MODE].hlp,
+		main_cfg[SET_GUI_LANGUAGE].hlp,
+		main_cfg[SET_REWIND_MINUTES].hlp,
+		main_cfg[SET_ONLYCMDLINE_HIDDEN_GUI].hlp,
+		sch_input
 	);
 	init(name, uQString(uL("" NAME " Command Line Help")), usage_string);
 	free(usage_string);
