@@ -2048,6 +2048,7 @@ EXTERNC void settings_resolution_val_to_int(int *w, int *h, const uTCHAR *buffer
 
 EXTERNC void *settings_inp_rd_sc(int index, int type);
 EXTERNC void settings_inp_wr_sc(void *str, int index, int type);
+EXTERNC DBWORD settings_inp_wr_port(void *str, int index, int type);
 EXTERNC void settings_inp_all_defaults(_config_input *config_input, _array_pointers_port *array);
 EXTERNC void settings_inp_port_defaults(_port *port, int index, int mode);
 EXTERNC void settings_inp_port_button_default(int button, _port *port, int index, int mode);
